...
        android:src="@drawable/baseline_image_search_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_dashboard_admin_user_search_button"
        android:layout_marginTop="8dp"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_dashboard_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
...
